--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@nestjs/core": "^7.0.0",
 		"@nestjs/platform-express": "^7.0.0",
 		"@nestjs/swagger": "^4.7.12",
+		"class-transformer": "^0.3.2",
 		"class-validator": "^0.13.1",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
@@ -66,9 +67,5 @@
 		},
 		"coverageDirectory": "../coverage",
 		"testEnvironment": "node"
-	},
-	"engines": {
-		"node": "14.9.0",
-		"yarn": "1.22.1"
 	}
 }
