--- a/package.json
+++ b/package.json
@@ -67,5 +67,9 @@
 		},
 		"coverageDirectory": "../coverage",
 		"testEnvironment": "node"
+	},
+	"engines": {
+		"node": "10.23.1",
+		"yarn": "1.22.5"
 	}
 }
